prepare for multithreading

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,5 @@
 bin_PROGRAMS = evlcm
-dist_noinst_DATA = README.md
-dist_noinst_DATA += src/evlcm_y_t.lcm
+dist_noinst_DATA = README.md src/evlcm_data_t.lcm
 EXTRA_DIST = .build-aux/git-version-gen
 
 evlcm_%_t.c evlcm_%_t.h: src/evlcm_%_t.lcm
@@ -11,8 +10,8 @@ AM_CFLAGS = -std=gnu99 $(LCM_CFLAGS)
 evlcm_SOURCES = config.h \
 	src/evlcm.h \
 	src/evlcm-argp.h \
-	evlcm_y_t.h \
-	evlcm_y_t.c \
+	evlcm_data_t.h \
+	evlcm_data_t.c \
 	src/evlcm.c
 
 MOSTLYCLEANFILES = *.gz *.bz2 *.xz
