compiles with `pthread` but fails `ev` assertion
Looks like I've done something not-quite-right with my event loops. Time
to go back and read the `libev` documentation again.

```
evlcm: ev.c:4027: ev_run: Assertion `("libev: ev_loop recursion during release detected", loop_done != EVBREAK_RECURSE)' failed.
```

--- a/configure.ac
+++ b/configure.ac
@@ -19,6 +19,7 @@ AS_IF([test "${LCMGEN}" == "x/bin/false"],
 AC_SEARCH_LIBS([ev_run],[ev])
 AC_SEARCH_LIBS([lcm_create],[lcm])
 AC_SEARCH_LIBS([sin],[m])
+AC_SEARCH_LIBS([pthread_create],[pthread])
 
 AC_PROG_CC
 AC_OUTPUT
