--- a/.github/workflows/build-if-tag-release.yaml
+++ b/.github/workflows/build-if-tag-release.yaml
@@ -3,8 +3,9 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: bluesquall/lcm:1.3.1
     steps:
+      - name: dependencies
+        run: sudo apt-get install -y libev-dev liblcm-dev
       - name: checkout
         uses: actions/checkout@v3
       - name: autoconf
